# pyCFClient

./: .gitignore  .hgignore  .pre-commit-config.yaml  .project  .pydevproject  Doxyfile  MANIFEST  README.md  cf-monitor-test  cf-update-ioc  cf_monitor.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
channelfinder/: CFDataTypes.py  ChannelFinderClient.py  __init__.py  _conf.py  cfMonitorTest.py
channelfinder/cfPropertyManager/: CFPropertyManager.py  __init__.py  cf-property-manager-config.cfg
channelfinder/cfUpdate/: CFUpdateIOC.py
channelfinder/core/: Channel.py  ChannelFinderClient.py  ChannelUtil.py  _conf.py
channelfinder/lib/: myCollections.py  restful_lib.py
channelfinder/util/: ChannelUtil.py  Validators.py  __init__.py
example/: demo.py  lat_conf_table.txt  loadData.py
src/: Channel.py  ChannelFinderClient.py  ChannelFinderClientTest.py  ChannelTest.py  Junk.py  setup.py
src/api/: Channel.py  ChannelTest.py  Dictionary.py
src/lib/: myCollections.py  restful_lib.py
test/: CFUpdateIOCListTest.py  CFUpdateIOCTest.py  ChannelFinderClientTest.py  ChannelTest.py  ChannelUtilTest.py  _testConf.py  cf-property-manager-unittest.py  docker-compose.yml  testCFPpropertyManager.py  testCFUpdateIOC.py  testChannelFinderClient.py  testChannelUtil.py
